--- a/languages/ml/haskell/haskell.org
+++ b/languages/ml/haskell/haskell.org
@@ -216,6 +216,9 @@
 | exec -- which EXE |                                                   |
 | exec EXE -- ARGS  | will run the EXE with ARGS                        |
 | ghci LIB          | starts repl in LIB context                        |
+** dot - get a dependency DOT graph
+https://stackoverflow.com/questions/69270620/generating-haskell-module-dependency-tree
+https://docs.haskellstack.org/en/stable/dependency_visualization/
 * Personalities
 ** Simon Peyton-Jones
 - haskell comitee on design
