--- a/languages/rust/rust.org
+++ b/languages/rust/rust.org
@@ -1,3 +1,4 @@
+- Private Cargo registry https://shipyard.rs/
 - Article: https://rauljordan.com/rust-concepts-i-wish-i-learned-earlier/
 - tutorial https://google.github.io/comprehensive-rust/
 - https://github.com/trickster0/OffensiveRust
